--- a/client/dockerfile
+++ b/client/dockerfile
@@ -4,13 +4,16 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN yarn
+RUN yarn install
 
 COPY . .
 
 RUN yarn build
 
-FROM nginx:stable-alpine as production-stage
+FROM nginx as production-stage
+
 COPY  ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
+
+FROM nginx
